--- a/_sass/3-layouts/homepage/_feature_and_older_posts.scss
+++ b/_sass/3-layouts/homepage/_feature_and_older_posts.scss
@@ -71,8 +71,8 @@
     }    
 }
 .older_posts_button{
-    margin-top:rem(50px , 'desktop');
-    margin-bottom:rem(272px , 'desktop');
+    margin-top:rem(-60px);
+    margin-bottom:rem(75px);
     text-align: center;
     transition: all 500ms ease-in-out;
     
@@ -81,10 +81,6 @@
         color:$dark_text_color;
     }
     h2{
-        @media screen and (min-width: rem($mobile_breakpoint)){              
-            font-size:rem(20px, 'desktop');
-            margin: 0;
-        }
         &::after{
             content:'. . .';      
             display: block;
@@ -95,6 +91,15 @@
     &:hover{
         transform: translate(0, -5px);
     }
+    @media screen and (min-width: rem($mobile_breakpoint)){              
+        margin-top:rem(50px , 'desktop');
+        margin-bottom:rem(272px , 'desktop');        
+        h2{
+            font-size:rem(20px, 'desktop');
+            margin: 0;
+        }
+    }
+
 }
 .blog_item{
     box-shadow: 0px 0px 31px -8px rgba(0,0,0,0.75);
